k8s/ingress/ContainerAPI/ifbom-atl1-vmc-step2-bom-rewrite-path-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ifbom-atl1-vmc-step2-bom-rewrite-path-ingress
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: apikey, vmc-step2-bom-acl , rewrite-path
spec:
  ingressClassName: kong
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: vmcbom-services-public-k6-apiv1
            port:
              number: 80
        path: /pcs/vmcbom/v1/SearchSupplier
        pathType: ImplementationSpecific
